--- a/index.css
+++ b/index.css
@@ -5,28 +5,29 @@
 }*/
 
 body {
-    background-color: rgb(224, 224, 223);
+  background-color: rgb(224, 224, 223);
 }
 
 .gombok {
-    display:inline-block;
-    padding: 2rem;
-    margin: 1rem;
-    border-radius: 30px;
-    background-color: rgb(16, 134, 95);
-    text-align: center;
-    max-width: 150px ;
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 25px;
-    color: white;
+  display: inline-block;
+  padding: 2rem;
+  margin: 1rem;
+  border-radius: 30px;
+  background-color: rgb(16, 134, 95);
+  text-align: center;
+  max-width: 150px;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 25px;
+  color: white;
 }
 
-.gombok:hover{
-  color: rgb(16,134,95);
+.gombok:hover {
+  color: rgb(16, 134, 95);
   background-color: white;
 
 }
+
 .knitting-page {
   font-family: "Segoe UI", Arial, sans-serif;
   background-color: #e8e8e7;
@@ -79,7 +80,8 @@ body {
   color: #2a4b8d;
   margin-top: 25px;
   text-align: center;
-}   
+}
+
 .knitting-page h4 {
   color: #334;
   margin-top: 30px;
@@ -136,8 +138,9 @@ body {
   padding-left: 25px;
   margin-bottom: 20px;
 }
+
 .knitting-page .techniques h4 {
-  color: #2a4b8d;       
+  color: #2a4b8d;
   font-size: 1.1rem;
   font-weight: 700;
   margin-top: 35px;
@@ -153,6 +156,7 @@ body {
   border-radius: 8px;
   margin-top: 40px;
 }
+
 .knitting-page .closing-section {
   margin-top: 60px;
   padding: 0 30px;
@@ -172,7 +176,7 @@ body {
   text-align: justify;
   color: #333;
   max-width: 900px;
-  margin: 0 0 30px 0; 
+  margin: 0 0 30px 0;
   line-height: 1.8;
   font-size: 1rem;
   padding-left: 0;
@@ -197,19 +201,20 @@ body {
 .knitting-page .closing-quote {
   text-align: center;
   font-style: italic;
-  color: #999;           
+  color: #999;
   font-size: 1rem;
   line-height: 1.6;
   margin: 15px auto 50px auto;
   max-width: 600px;
 }
+
 @media (max-width: 768px) {
 
   .knitting-page .content {
     padding: 15px;
   }
 
- 
+
   .knitting-page .image-row {
     flex-direction: column;
     align-items: center;
@@ -227,7 +232,7 @@ body {
     max-width: none;
   }
 
-  
+
   .knitting-page .closing-text {
     padding: 0 10px;
   }
@@ -240,20 +245,20 @@ body {
 
 
 .dashbody {
-    max-width: 100vw;
-    /*margin: auto;*/
-    margin-right: 2rem;
-    background-color: #F5F6FA;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  max-width: 100vw;
+  /*margin: auto;*/
+  margin-right: 2rem;
+  background-color: #F5F6FA;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 }
 
-.grid{
-    /*min-height: auto;*/
-    display: grid;
-    grid-template-columns: 0.7fr repeat(5, 1fr);
-    grid-template-rows: repeat(6, auto);
-    grid-template-areas:
+.grid {
+  /*min-height: auto;*/
+  display: grid;
+  grid-template-columns: 0.7fr repeat(5, 1fr);
+  grid-template-rows: repeat(6, auto);
+  grid-template-areas:
     "m m m m m m"
     "o d d d d d"
     "o s1 s2 s3 s4 s5"
@@ -264,39 +269,39 @@ body {
     "o m m m m m"
     "o m m m m m"
     "o m m m m m" */
-    ;
-    gap: 0rem;
-    
+  ;
+  gap: 0rem;
+
 }
 
 .main {
-    /*background-color: bisque;*/
-    display:grid;
-    grid-area: m;
-    grid-template-columns: max-content 1fr repeat(3, 1fr);
-    color: white;
-    text-decoration: none;
-    /*align-items:start;*/
-    padding-block: 1rem;
-    padding-left: 2rem;
-    /*border-bottom: 1px solid grey;*/
-    column-gap: 5rem;
-    text-align: center;
-    align-items:end;
-    background-color:#0A3D91;
-    font-weight: 600;
-    border-radius: 10px 10px 0px 0px;
-    padding-block: 1rem;
-    position: sticky;
-    top: 0;
-    /*width: 100%;*/
-    
-    
+  /*background-color: bisque;*/
+  display: grid;
+  grid-area: m;
+  grid-template-columns: max-content 1fr repeat(3, 1fr);
+  color: white;
+  text-decoration: none;
+  /*align-items:start;*/
+  padding-block: 1rem;
+  padding-left: 2rem;
+  /*border-bottom: 1px solid grey;*/
+  column-gap: 5rem;
+  text-align: center;
+  align-items: end;
+  background-color: #0A3D91;
+  font-weight: 600;
+  border-radius: 10px 10px 0px 0px;
+  padding-block: 1rem;
+  position: sticky;
+  top: 0;
+  /*width: 100%;*/
+
+
 }
 
-.main i{
-    margin-right: 8px;
-    
+.main i {
+  margin-right: 8px;
+
 }
 
 .main a {
@@ -312,117 +317,119 @@ body {
 
 
 .title {
-    /*background-color: cadetblue;*/
-    grid-area: d;
-    grid-template-rows: repeat(5, 1fr);
-    min-height: auto;
-    margin: 0px;
-    font-size: 16px;
-    font-weight: 500;
-    padding-block: 1rem;
-    text-align: justify;
-    padding-left: 2rem;
+  /*background-color: cadetblue;*/
+  grid-area: d;
+  grid-template-rows: repeat(5, 1fr);
+  min-height: auto;
+  margin: 0px;
+  font-size: 16px;
+  font-weight: 500;
+  padding-block: 1rem;
+  text-align: justify;
+  padding-left: 2rem;
 }
 
 .description {
-    /*background-color: cornflowerblue;*/
-    grid-area: d;
-    grid-column: 2 / 6;
-    grid-template-rows: repeat(5, 1fr);
-    font-size: 14px;
-    font-weight: 400;
-    padding-top: 1rem;
-    text-align: justify;
+  /*background-color: cornflowerblue;*/
+  grid-area: d;
+  grid-column: 2 / 6;
+  grid-template-rows: repeat(5, 1fr);
+  font-size: 14px;
+  font-weight: 400;
+  padding-top: 1rem;
+  text-align: justify;
 }
 
 .mtinfo {
-    /*background-color: lightgoldenrodyellow;*/
-    grid-area: d;
-    grid-template-rows: repeat(5, 1fr);
-    font-size: 15px;
-    font-weight: 500;
-    color: darkgray;
-    padding-top: 1rem;
+  /*background-color: lightgoldenrodyellow;*/
+  grid-area: d;
+  grid-template-rows: repeat(5, 1fr);
+  font-size: 15px;
+  font-weight: 500;
+  color: darkgray;
+  padding-top: 1rem;
 
 }
 
 .section1 {
-    /*background-color: aqua;*/
-    grid-area: s1;
-    border-radius: 10px 0px 0px 10px;
-    /*border-left: 1px solid rgb(209, 209, 209);*/
+  /*background-color: aqua;*/
+  grid-area: s1;
+  border-radius: 10px 0px 0px 10px;
+  /*border-left: 1px solid rgb(209, 209, 209);*/
 }
 
 .section2 {
-    /*background-color: indianred;*/
-    grid-area: s2;
+  /*background-color: indianred;*/
+  grid-area: s2;
 }
 
 .section3 {
-    /*background-color: lightgreen;*/
-    grid-area: s3;
+  /*background-color: lightgreen;*/
+  grid-area: s3;
 }
 
 .section4 {
-    /*background-color: seagreen;*/
-    grid-area: s4;
+  /*background-color: seagreen;*/
+  grid-area: s4;
 }
 
 .section5 {
-    /*background-color: thistle;*/
-    grid-area: s5;
-    border-radius: 0px 10px 10px 0px;
-    border-right: none;
+  /*background-color: thistle;*/
+  grid-area: s5;
+  border-radius: 0px 10px 10px 0px;
+  border-right: none;
 }
 
 .padding {
-    padding-block: 1rem;
-    background-color: rgb(255, 255, 255);
-    text-align: center;
-    /*border-block: 1px solid rgb(209, 209, 209);*/
-    border-right: 1px solid rgb(230, 230, 230);
-    box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+  padding-block: 1rem;
+  background-color: rgb(255, 255, 255);
+  text-align: center;
+  /*border-block: 1px solid rgb(209, 209, 209);*/
+  border-right: 1px solid rgb(230, 230, 230);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 }
 
 .padding i {
-    margin: 6px;
-    color: #2f3b52;
+  margin: 6px;
+  color: #2f3b52;
   font-size: 14px;
 }
 
 .sidemenu {
-    background-color:#1E2A45 ;
-    grid-area: o;
-    /*grid-row: 1 / 6;*/
-    margin-right: 1rem;
-    /*margin-top: -1rem;*/
-    line-height: 2.5rem;
-    color: white;
-    padding-top: 2rem;
+  background-color: #1E2A45;
+  grid-area: o;
+  /*grid-row: 1 / 6;*/
+  margin-right: 1rem;
+  /*margin-top: -1rem;*/
+  line-height: 2.5rem;
+  color: white;
+  padding-top: 2rem;
 }
 
 .sidemenu ul {
-list-style: none;
-padding-left: 0;
-margin: 0;
-text-align: center;
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+  text-align: center;
 }
 
-.sidemenu li{
-    /*padding-right: 1rem;*/
-    font-weight: 300;
-    width: 100%;
+.sidemenu li {
+  /*padding-right: 1rem;*/
+  font-weight: 300;
+  width: 100%;
 
 }
+
 .sidemenu a {
   display: block;
   padding-left: 2rem;
   text-align: left;
 }
 
-.sidemenu a:hover{
-background-color: #2F66F3;
+.sidemenu a:hover {
+  background-color: #2F66F3;
 }
+
 /*
 .sidemenu li:hover {
     
@@ -432,55 +439,62 @@ background-color: #2F66F3;
 }
 */
 .sidemenu i {
-    margin-right: 8px;
+  margin-right: 8px;
 }
 
 .chart {
-    /*background-color: blue;*/
-    grid-area: c;
-    margin: 0px;
-    padding: 0rem;
-    margin-top: 1rem;
-    /*border: 1px solid grey;*/
+  /*background-color: blue;*/
+  grid-area: c;
+  margin: 0px;
+  padding: 0rem;
+  margin-top: 1rem;
+  /*border: 1px solid grey;*/
 }
 
 .summary {
-    /*background-color: purple;*/
-    grid-area: z;
-    margin: 0px;
-    padding: 2rem;
-    margin-top: 1rem;
-    /*border: 1px solid rgb(209, 209, 209);*/
-    border-radius: 10px;
-    background-color: rgb(255, 255, 255);
-    width: 100%;
-    overflow: hidden;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  /*background-color: purple;*/
+  grid-area: z;
+  margin: 0px;
+  padding: 2rem;
+  margin-top: 1rem;
+  /*border: 1px solid rgb(209, 209, 209);*/
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  overflow: hidden;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
-.summary th, .summary td, .history th, .history td {
+.summary th,
+.summary td,
+.history th,
+.history td {
   padding: 10px 12px;
   border-bottom: 1px solid #e0e0e0;
   font-size: 0.75rem;
 }
 
-.summary thead, .history thead {
-    text-align: center;
-    background-color: #E8F0FE;
-    color: #1A1A1A;
+.summary thead,
+.history thead {
+  text-align: center;
+  background-color: #E8F0FE;
+  color: #1A1A1A;
 }
 
-.summary tbody tr:nth-child(even), .history tbody tr:nth-child(even) {
+.summary tbody tr:nth-child(even),
+.history tbody tr:nth-child(even) {
   background-color: white;
 }
 
-.summary tbody tr:hover, .history tbody tr:hover {
+.summary tbody tr:hover,
+.history tbody tr:hover {
   background-color: #F3F6FF;
 }
 
-.summary td:first-child, {
-  font-weight: bold;
-  text-align: left;
+.summary td:first-child,
+{
+font-weight: bold;
+text-align: left;
 }
 
 .summary td:last-child {
@@ -489,36 +503,37 @@ background-color: #2F66F3;
 }
 
 .history {
-    /*background-color: yellow;*/
-    grid-area: t;
-    margin: 0px;
-    padding: 2rem;
-    margin-top: 1rem;
-    /*border: 1px solid rgb(209, 209, 209);*/
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    border-radius: 10px;
-    background-color: rgb(255, 255, 255);
-        
+  /*background-color: yellow;*/
+  grid-area: t;
+  margin: 0px;
+  padding: 2rem;
+  margin-top: 1rem;
+  /*border: 1px solid rgb(209, 209, 209);*/
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+
 }
 
 .chartkep {
-    object-fit: cover;
-    width: 100%;
-    border: 1px solid rgb(209, 209, 209);
-    border-radius: 10px;
+  object-fit: cover;
+  width: 100%;
+  border: 1px solid rgb(209, 209, 209);
+  border-radius: 10px;
 }
 
 .section {
-    font-size: 30px;
-    font-weight: 600;
-    color: #006B3C;
+  font-size: 30px;
+  font-weight: 600;
+  color: #006B3C;
 }
 
 .sectionminus {
-    font-size: 30px;
-    font-weight: 600;
-    color: #E74C3C;
+  font-size: 30px;
+  font-weight: 600;
+  color: #E74C3C;
 }
+
 /*
 ul {
     
@@ -540,6 +555,7 @@ ul {
   margin-top: -1rem;
   border-radius: 0px 0px 10px 10px;
 }
+
 /*
 .dashlogo {
   float: left;
