kimaradt a nevem a title-ból

--- a/index.css
+++ b/index.css
@@ -530,3 +530,14 @@ ul {
    
 }
   */
+
+  media screen and (max-width: 600px) {
+    /* .main {
+        grid-template-columns: 1fr;
+    } */
+
+    .grid {
+      grid-template-columns: 1fr;
+        /* display: block; */
+    }
+}
